<resources>
    <string name="app_name">Chit Chat</string>

    <string name="auth_error_toast">Что-то пошло не так</string>
    <string name="auth_network_error_toast">Нет подключения к интернету</string>
    <string name="auth_email">E-mail</string>
    <string name="auth_email_hint">Введите ваш e-mail</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_password_hint">Введите ваш пароль</string>
    <string name="auth_email_error_hint">Неверный формат email</string>

    <string name="chat_list_title">Чаты</string>
    <string name="chat_list_chats_load_error">Ошибка загрузки списка чатов</string>
    <string name="chat_list_delete_chat_error">Не удалось удалить/покинуть чат</string>
    <string name="chat_list_leave_chat">Покинуть чат</string>

    <string name="date_minutes_ago">%1$d мин. назад</string>
    <string name="date_hours_ago">%1$d час. назад</string>
    <string name="date_today_at">сегодня в %1$s</string>
    <string name="date_yesterday_at">вчера в %1$s</string>
    <string name="date_less_year_ago">%1$s в %2$s</string>
    <string name="date_years_ago">%1$sг.</string>

    <string name="edit_profile_title">Редактировать аккаунт</string>

    <string name="home_navbar_contacts">Контакты</string>
    <string name="home_navbar_new_chat">Чаты</string>
    <string name="home_navbar_settings">Настройки</string>

    <string name="login_title">Войти</string>
    <string name="login_forget_password">Забыли пароль?</string>
    <string name="login_button">Войти</string>
    <string name="login_sign_up">Еще нет аккаунта?</string>
    <string name="login_sign_up_link">Зарегистрироваться</string>
    <string name="login_wrong_password_hint">Неверный пароль</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_account">Настройки аккаунта</string>
    <string name="settings_sharing_profile">Поделиться профилем</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_switch_account">Сменить аккаунт</string>
    <string name="settings_report">Сообщить о проблеме</string>
    <string name="settings_logout">Выйти</string>
    <string name="settings_upload_image_error">Ошибка загрузки изображения</string>
    <string name="settings_image_error">Не удалось сохранить изображение</string>

    <string name="sharing_profile_title">Поделиться профилем</string>
    <string name="sharing_text_field_qr">Поделитесь вашим QR-кодом</string>
    <string name="sharing_text_field_username">Поделитесь вашим именем пользователя</string>
    <string name="sharing_or">Или</string>

    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_first_name">Имя</string>
    <string name="sign_up_first_name_hint">Введите имя</string>
    <string name="sign_up_last_name">Фамилия</string>
    <string name="sign_up_last_name_hint">Введите фамилию</string>
    <string name="sign_up_password_error_hint">Пароль должен содержать как минимум 8 символов, одну цифру, одну букву, и один спец.символ (@$!%*#?&amp;)</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_up_login">Уже есть аккаунт?</string>
    <string name="sign_up_login_link">Войти</string>
    <string name="sign_up_format_error_hint">Поле не может быть пустым</string>
    <string name="sign_up_user_name_hint">Введите уникальное имя пользователя</string>
    <string name="sign_up_user_name">Имя пользователя</string>
    <string name="sign_up_user_name_warning">Внимание, имя пользователя нельзя изменить после регистрации</string>
    <string name="sign_up_user_name_validate_fail">Имя пользователя должно содержать минимум 8 символов: цифры, заглавные и строчные латинские буквы и нижнее подчеркивание</string>
    <string name="sign_up_user_name_already_exist">Имя занято</string>
    <string name="sign_up_email_already_exist">Пользователь с такой почтой уже существует</string>

    <string name="create_chat_create_group">Создать новый групповой чат</string>

    <string name="navbar_new_chat">Чаты</string>
    <string name="navbar_settings">Настройки</string>
</resources>